basic quiz functionality; dynamically created questions and restart button when the questions are answered

--- a/index.html
+++ b/index.html
@@ -13,14 +13,20 @@
 			<img src="./assets/images/kong.PNG" />
 		</header>
 
-		<main>
+		<main class="quizSection">
+			<section class="hide" id="questionSection">
+			  <div id="question"></div>
+			  <div id="answers" class="buttonSection"></div>
+			</section>
 
+			<section class="controls">
+			  <button class="start" id="startButton">START</button>
+			</section>
 		</main>
 
 		<footer>
-			<p>Made by Tyler Norman</p>	
+			<p>Made by Tyler Norman</p>
 		</footer>
-
 		<script src="./assets/js/script.js"></script>
 	</body>
 </html> 
