added basic timer, need to subtrtact time on wrong answer

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<body>
 		<header>
 			<img src="./assets/images/kong.PNG" />
+			<section id="timer">Time: 180</section>
 		</header>
 
 		<main class="quizSection">
@@ -20,7 +21,7 @@
 			</section>
 
 			<section class="controls">
-			  <button class="start" id="startButton">START</button>
+			  <button class="start" id="startButton">Start</button>
 			</section>
 		</main>
 
