added basic score rules

--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
 			<section class="controls">
 			  <button class="start" id="startButton">Start</button>
 			</section>
+
+			<section class="hide" id="scoreSection">
+				<div id="player-score"></div>
+				<button id="submit-score">Save Score</button>
+			</section>
 		</main>
 
 		<footer>
