added precursor to local storage, no fucntionality yet

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 			<section class="hide" id="scoreSection">
 				<div id="player-score"></div>
 				<button id="submit-score">Save Score</button>
+				<button id="see-score">See High Scores</button>
 			</section>
 		</main>
 
