restructured score area and added naming submission; no functionality

--- a/index.html
+++ b/index.html
@@ -16,18 +16,20 @@
 
 		<main class="quizSection">
 			<section class="hide" id="questionSection">
-			  <div id="question"></div>
-			  <div id="answers" class="buttonSection"></div>
+			  	<div id="question"></div>
+			  	<div id="answers" class="buttonSection"></div>
 			</section>
 
 			<section class="controls">
-			  <button class="start" id="startButton">Start</button>
+				<button class="start" id="startButton">Start</button>
 			</section>
 
 			<section class="hide" id="scoreSection">
 				<div id="player-score"></div>
-				<button id="submit-score">Save Score</button>
+				<label id="player-name-section">Player Name: <input type="text"></label>
+				<button id="name-score-submit">Submit Name & Score</button>
 				<button id="see-score">See High Scores</button>
+				<div id="high-score-section"></div>
 			</section>
 		</main>
 
