started coding player name submission ebfore game starts

--- a/index.html
+++ b/index.html
@@ -21,13 +21,14 @@
 			</section>
 
 			<section class="controls">
-				<button class="start" id="startButton">Start</button>
+				<label id="player-name-section">Player Name: <input type="text" id="player-name"></label>
+				<button id="submit-name-button">Submit Name</button>
+				<button id="startButton">Start</button>
 			</section>
 
 			<section class="hide" id="scoreSection">
 				<div id="player-score"></div>
-				<label id="player-name-section">Player Name: <input type="text"></label>
-				<button id="name-score-submit">Submit Name & Score</button>
+				<button id="score-submit">Submit Score</button>
 				<button id="see-score">See High Scores</button>
 				<div id="high-score-section"></div>
 			</section>
