opted to restore branch to previous develop state to start over on implimentation of persistence

--- a/index.html
+++ b/index.html
@@ -16,21 +16,17 @@
 
 		<main class="quizSection">
 			<section class="hide" id="questionSection">
-			  	<div id="question"></div>
-			  	<div id="answers" class="buttonSection"></div>
+			  <div id="question"></div>
+			  <div id="answers" class="buttonSection"></div>
 			</section>
 
 			<section class="controls">
-				<label id="player-name-section">Player Name: <input type="text" id="player-name"></label>
-				<button id="submit-name-button">Submit Name</button>
-				<button id="startButton">Start</button>
+			  <button class="start" id="startButton">Start</button>
 			</section>
 
 			<section class="hide" id="scoreSection">
 				<div id="player-score"></div>
-				<button id="score-submit">Submit Score</button>
-				<button id="see-score">See High Scores</button>
-				<div id="high-score-section"></div>
+				<button id="submit-score">Save Score</button>
 			</section>
 		</main>
 
