resolved timer initializing during game over state and basic ability to put in name and save score; no persistence with score and name saving yet

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 			<section class="hide" id="scoreSection">
 				<div id="player-score"></div>
-				<label for="playerName">Name: </label>
+				<label for="playerName" id="playerNameLabel">Name: </label>
   				<input type="text" id="playerName">
 				<button id="submit-score">Save Score</button>
 				<button id="showScoresButton">See High Scores</button>
