created two arrays; one for p[layer name and the other for scoring that are persistent when the plkayer enters a name after the quiz has ended

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
   				<input type="text" id="playerName">
 				<button id="submit-score">Save Score</button>
 				<button id="showScoresButton">See High Scores</button>
+				<ol class="hide" id="highScoresOl"></ol>
 			</section>
 		</main>
 
