--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 				<section class="hide" id="scoreSection">
 					<div class= "player-score" id="player-score"></div>
-					<label for="playerName" id="playerNameLabel">Name: </label>
+					<label class= "playerNameLabel" for="playerName" id="playerNameLabel">Name: </label>
 					<input type="text" id="playerName">
 					<button class="submit-score hide" id="submit-score">Save Score</button><br>
 					<button class="start" id="showScoresButton">See High Scores</button>
