minor style updates

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				<section class="hide" id="scoreSection">
 					<div class= "player-score" id="player-score"></div>
 					<label class= "playerNameLabel" for="playerName" id="playerNameLabel">Name: </label>
-					<input type="text" id="playerName">
+					<input class= "playerNameInput" type="text" id="playerName">
 					<button class="submit-score hide" id="submit-score">Save Score</button><br>
 					<button class="start" id="showScoresButton">See High Scores</button>
 					<ol class="highScoresOl hide" id="highScoresOl"></ol>
